--- a/strona/index.html
+++ b/strona/index.html
@@ -8,6 +8,7 @@
     <script defer src = "react-dom.js"  ></script>
     <script defer src="babel.js"></script>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="styl.css">
 </head>
 <body>
     <header>
@@ -16,7 +17,7 @@
     <header>
     <main>
         <h3 id="hp">20</h3>
-        
+        <progress id="entityHealth" max="20" value="20"></progress>
         <button onclick="Atack()">Click</button>
         
     </main>
