--- a/strona/index.html
+++ b/strona/index.html
@@ -12,13 +12,16 @@
 </head>
 <body>
     <header>
-        <h1>Score</h1>
+        
         <h1 id="gold_txt">0</h1>
     <header>
     <main>
-        <h3 id="hp">20</h3>
-        <progress id="entityHealth" max="20" value="20"></progress>
-        <button onclick="Atack()">Click</button>
+        <div id="enemy-container">
+            <h3 id="hp">20</h3>
+            <progress id="entityHealth" max="20" value="20"></progress>
+            <button onclick="Attack()"><img src="barbarian.png"></button>
+
+        </div>
         
     </main>
     <footer>
